# witchard

./: .cursorrules  README.md  TODO.md  card.py  client.py  game.py  main.py  pyproject.toml  server.py
.cursor/rules/: api-client-state-matching.mdc  meta-rules.mdc  python-styleguide.mdc
docs/: gameserver.md
frontend/: card_colors.css  index.html  index.js  style.css
gameserver/: .gitignore  card.py  game.py  gameserver.py  server.py
webclient/: package.json
webclient/src/lib/: stores.ts
webclient/src/lib/components/: Card.svelte
webclient/src/routes/: +page.svelte
webclient/src/routes/game/[gameId]/: +page.svelte
webclient/src/routes/lobby/[gameId]/: +page.svelte
